@@ -306,11 +306,15 @@ int ArpData::getAlsaClientId()
 void ArpData::handleController(int ccnumber, int value)
 {
     bool m;
+    int min, max, sval;
     QVector<MidiCC> cclist;
     if (!midiLearnFlag) {
 	    for (int l1 = 0; l1 < arpWidgetCount(); l1++) {
 	        cclist = arpWidget(l1)->ccList;
 	        for (int l2 = 0; l2 < cclist.count(); l2++) {
+				min = cclist.at(l2).min;
+				max = cclist.at(l2).max;
+
 	            if (ccnumber == cclist.at(l2).ccnumber) {
 	                switch (cclist.at(l2).ID) {
 	                    case 0: if (value == 127) {
@@ -329,7 +333,9 @@ void ArpData::handleController(int ccnumber, int value)
 	    for (int l1 = 0; l1 < lfoWidgetCount(); l1++) {
 	        cclist = lfoWidget(l1)->ccList;
 	        for (int l2 = 0; l2 < cclist.count(); l2++) {
-	            if (ccnumber == cclist.at(l2).ccnumber) {
+				min = cclist.at(l2).min;
+				max = cclist.at(l2).max;
+				if (ccnumber == cclist.at(l2).ccnumber) {
 	                switch (cclist.at(l2).ID) {
 	                    case 0: if (value == 127) {
 	                                m = lfoWidget(l1)->muteOut->isChecked();
@@ -338,11 +344,17 @@ void ArpData::handleController(int ccnumber, int value)
 	                            }
 	                    break;
 	                    
-	                    case 1: lfoWidget(l1)->amplitude->setValue(value);
+	                    case 1: 
+								sval = min + ((double)value * (max - min)
+										/ 127);
+								lfoWidget(l1)->amplitude->setValue(sval);
 	                            return;
 	                    break;
 	                    
-	                    case 2: lfoWidget(l1)->offset->setValue(value);
+	                    case 2: 
+								sval = min + ((double)value * (max - min)
+										/ 127);
+								lfoWidget(l1)->offset->setValue(sval);
 	                            return;
 	                    break;
 	                    default:
@@ -355,6 +367,8 @@ void ArpData::handleController(int ccnumber, int value)
 	    for (int l1 = 0; l1 < seqWidgetCount(); l1++) {
 	        cclist = seqWidget(l1)->ccList;
 	        for (int l2 = 0; l2 < cclist.count(); l2++) {
+				min = cclist.at(l2).min;
+				max = cclist.at(l2).max;
 	            if (ccnumber == cclist.at(l2).ccnumber) {
 	                switch (cclist.at(l2).ID) {
 	                    case 0: if (value == 127) {
@@ -364,11 +378,17 @@ void ArpData::handleController(int ccnumber, int value)
 	                            }
 	                    break;
 	                    
-	                    case 1: seqWidget(l1)->velocity->setValue(value);
+	                    case 1: 
+								sval = min + ((double)value * (max - min)
+										/ 127);
+								seqWidget(l1)->velocity->setValue(sval);
 	                            return;
 	                    break;
 	                    
-	                    case 2: seqWidget(l1)->notelength->setValue(value + value);
+	                    case 2: 
+								sval = min + ((double)value * (max - min)
+										/ 127);
+								seqWidget(l1)->notelength->setValue(sval);
 								// send 2*value until range handling is implemented
 	                            return;
 	                    break;
