@@ -21,20 +21,35 @@
 
 
 #include <QVector>
+#include <QDialogButtonBox>
 #include "midicctable.h"
 #include "mainwindow.h"
 
-MidiCCTable::MidiCCTable(ArpData *arpData, QWidget *parent) : QDialog(parent)
+MidiCCTable::MidiCCTable(ArpData *p_arpData, QWidget *parent) : QDialog(parent)
 {
-    QTableWidget *midiCCTable = new QTableWidget(this);
+	arpData = p_arpData;
+	QGridLayout *boxLayout = new QGridLayout(this);
+    midiCCTable = new QTableWidget(this);
     
     midiCCTable->clear();
     midiCCTable->setRowCount(arpData->moduleWindowCount()*10);
-    midiCCTable->setColumnCount(4);
+    midiCCTable->setColumnCount(6);
+    midiCCTable->setColumnHidden(4, true);
+    midiCCTable->setColumnHidden(5, true);
+    getCurrentControls(midiCCTable);
+	connect(midiCCTable, SIGNAL(itemChanged(QTableWidgetItem*)),
+					this, SLOT(itemChanged(QTableWidgetItem*)));    
     
-    getCurrentControls(arpData, midiCCTable);
+	QDialogButtonBox *buttonBox = new QDialogButtonBox(QDialogButtonBox::Ok
+									| QDialogButtonBox::Cancel);
+	connect(buttonBox, SIGNAL(accepted()), this, SLOT(accept()));
+	connect(buttonBox, SIGNAL(rejected()), this, SLOT(reject()));    
+    
+    boxLayout->addWidget(midiCCTable, 0, 0);
+    boxLayout->addWidget(buttonBox, 1, 0);
+    
 	setModal(true);
-	resize(300, 200);
+	resize(250, 200);
     setWindowTitle(tr("MIDI Controllers - ") + APP_NAME);
     show();
 }
@@ -43,7 +58,7 @@ MidiCCTable::~MidiCCTable()
 {
 }
 
-void MidiCCTable::getCurrentControls(ArpData * arpData, QTableWidget * midiCCTable)
+void MidiCCTable::getCurrentControls(QTableWidget * midiCCTable)
 {
     QVector<MidiCC> ccList;
     int l1, l2;
@@ -57,16 +72,7 @@ void MidiCCTable::getCurrentControls(ArpData * arpData, QTableWidget * midiCCTab
 			midiCCTable->setVerticalHeaderItem(nrows,
 					new QTableWidgetItem(arpData->arpWidget(l1)->name));
 					
-	        midiCCTable->setItem(nrows, 0, 
-					new QTableWidgetItem(ccList.at(l2).name));
-	        midiCCTable->setItem(nrows, 1, 
-					new QTableWidgetItem(QString("%1").arg(ccList.at(l2).ccnumber)));
-	        midiCCTable->setItem(nrows, 2,
-					new QTableWidgetItem(QString("%1").arg(ccList.at(l2).min)));
-	        midiCCTable->setItem(nrows, 3,
-					new QTableWidgetItem(QString("%1").arg(ccList.at(l2).max)));
-			
-			midiCCTable->setRowHeight(nrows, 20);
+			fillControlRow(nrows, ccList.at(l2), arpData->arpWidget(l1)->ID);
 			nrows++;
 		}
     }
@@ -79,15 +85,7 @@ void MidiCCTable::getCurrentControls(ArpData * arpData, QTableWidget * midiCCTab
 			midiCCTable->setVerticalHeaderItem(nrows,
 					new QTableWidgetItem(arpData->lfoWidget(l1)->name));
 					
-	        midiCCTable->setItem(nrows, 0, 
-					new QTableWidgetItem(ccList.at(l2).name));
-	        midiCCTable->setItem(nrows, 1, 
-					new QTableWidgetItem(QString("%1").arg(ccList.at(l2).ccnumber)));
-	        midiCCTable->setItem(nrows, 2,
-					new QTableWidgetItem(QString("%1").arg(ccList.at(l2).min)));
-	        midiCCTable->setItem(nrows, 3,
-					new QTableWidgetItem(QString("%1").arg(ccList.at(l2).max)));
-			midiCCTable->setRowHeight(nrows, 20);
+			fillControlRow(nrows, ccList.at(l2), arpData->lfoWidget(l1)->ID);
 			nrows++;
 		}
     }
@@ -100,15 +98,7 @@ void MidiCCTable::getCurrentControls(ArpData * arpData, QTableWidget * midiCCTab
 			midiCCTable->setVerticalHeaderItem(nrows,
 					new QTableWidgetItem(arpData->seqWidget(l1)->name));
 					
-	        midiCCTable->setItem(nrows, 0, 
-					new QTableWidgetItem(ccList.at(l2).name));
-	        midiCCTable->setItem(nrows, 1, 
-					new QTableWidgetItem(QString("%1").arg(ccList.at(l2).ccnumber)));
-	        midiCCTable->setItem(nrows, 2,
-					new QTableWidgetItem(QString("%1").arg(ccList.at(l2).min)));
-	        midiCCTable->setItem(nrows, 3,
-					new QTableWidgetItem(QString("%1").arg(ccList.at(l2).max)));
-			midiCCTable->setRowHeight(nrows, 20);
+			fillControlRow(nrows, ccList.at(l2), arpData->seqWidget(l1)->ID);
 			nrows++;
 		}
     }
@@ -130,4 +120,102 @@ void MidiCCTable::getCurrentControls(ArpData * arpData, QTableWidget * midiCCTab
 	midiCCTable->setColumnWidth(3, 30);
 	
 	midiCCTable->setRowCount(nrows);
+}
+
+void MidiCCTable::accept()
+{
+    QVector<MidiCC> ccList;
+    int ccnumber, min, max, ctrlID, moduleID;
+    int l1;
+    QChar moduleType;
+    
+    for (l1 = 0; l1 < arpData->arpWidgetCount(); l1++) 
+			arpData->arpWidget(l1)->ccList.clear();
+    for (l1 = 0; l1 < arpData->lfoWidgetCount(); l1++) 
+			arpData->lfoWidget(l1)->ccList.clear();
+    for (l1 = 0; l1 < arpData->seqWidgetCount(); l1++) 
+			arpData->seqWidget(l1)->ccList.clear();
+			
+    for (l1 = 0; l1 < midiCCTable->rowCount(); l1++) {
+		ccnumber = midiCCTable->item(l1, 1)->text().toInt();
+		min = midiCCTable->item(l1, 2)->text().toInt();
+		max = midiCCTable->item(l1, 3)->text().toInt();
+		ctrlID = midiCCTable->item(l1, 4)->text().toInt();
+		moduleID = midiCCTable->item(l1, 5)->text().toInt();
+		moduleType = midiCCTable->verticalHeaderItem(l1)->text().at(0);
+		
+		switch (moduleType.toLatin1()) {
+			case 'A': 
+					arpData->arpWidget(moduleID)
+					->appendMidiCC(ctrlID, ccnumber, min, max);
+			break;
+			case 'L': 
+					arpData->lfoWidget(moduleID)
+					->appendMidiCC(ctrlID, ccnumber, min, max);
+			break;
+			case 'S': 
+					arpData->seqWidget(moduleID)
+					->appendMidiCC(ctrlID, ccnumber, min, max);
+			break;
+		}
+	}
+	close();
+}
+
+void MidiCCTable::reject()
+{
+	close();
+}
+
+void MidiCCTable::closeEvent(QCloseEvent *e)
+{
+
+	e->accept();
+}
+
+void MidiCCTable::itemChanged(QTableWidgetItem *item)
+{
+	int test, row, comp;
+	
+	row = midiCCTable->currentRow();
+	test = item->text().toInt();
+	
+	switch (midiCCTable->currentColumn()) {
+		case 1: // CC Number
+				if (test > 127) item->setText("127");
+				if (test < 1) item->setText("0");
+		break;
+		case 2: // min
+				comp = midiCCTable->item(row, 3)->text().toInt();
+				if (test > comp) item->setText(QString::number(comp));
+				if (test < 1) item->setText("0");
+		break;
+		case 3: // max
+				comp = midiCCTable->item(row, 2)->text().toInt();
+				if (test > 127) item->setText("127");
+				if (test < comp) item->setText(QString::number(comp));
+		break;
+		default: 
+		break;
+	}
+}
+void MidiCCTable::fillControlRow(int row, MidiCC midiCC, int moduleID)
+{
+	QTableWidgetItem *nameItem = new QTableWidgetItem(midiCC.name);
+	nameItem->setFlags(Qt::ItemFlags(Qt::ItemIsSelectable 
+									|Qt::ItemIsEnabled));
+	nameItem->setBackground(QBrush(QColor(200,200,200)));
+	midiCCTable->setItem(row, 0, nameItem);
+	midiCCTable->setItem(row, 1, 
+			new QTableWidgetItem(QString::number(midiCC.ccnumber)));
+	midiCCTable->setItem(row, 2,
+			new QTableWidgetItem(QString::number(midiCC.min)));
+	midiCCTable->setItem(row, 3,
+			new QTableWidgetItem(QString::number(midiCC.max)));
+	midiCCTable->setItem(row, 4,
+			new QTableWidgetItem(QString::number(midiCC.ID)));
+	midiCCTable->setItem(row, 5,
+			new QTableWidgetItem(QString::number(moduleID)));
+	
+	midiCCTable->setRowHeight(row, 20);
 }
